# msg_chn_ros

./: .gitignore  CMakeLists.txt  README.md  package.xml  requirements.txt  run_eval.py  train.py
dataloader/: DataLoaders.py  KittiDepthDataset.py
modules/: losses.py
msg_chn/: README.md  infer_img.py  train.py
msg_chn/dataloader/: KittiDepthDataset.py
msg_chn/trainers/: DepthTrainer.py  trainer.py
msg_chn/utils/: ErrorMetrics.py  saveTensorToImage.py
msg_chn/workspace/exp_msg_chn/: final_model.pth  params.json
msg_chn_ros/config/: config.yaml
msg_chn_ros/launch/: msg_chn.launch
msg_chn_ros/rviz/: depth_video.rviz
msg_chn_ros/scripts/: msg_chn_colored.py  msg_chn_node.py
trainers/: DepthTrainer.py  trainer.py
utils/: saveTensorToImage.py
workspace/exp_msg_chn/: params.json
