<?xml version="1.0"?>
<package format="2">
  <name>msg_chn_ros</name>
  <version>1.0.0</version>
  <description>The msg_chn_ros package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="duda.andrada@isr.uc.pt">M. Eduarda Andrada</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>GPLv3</license>


  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>roscpp</buildtool_depend>
  <exec_depend>cv_bridge</exec_depend> 
  <exec_depend>image_transport</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>pcl_msgs</exec_depend>
  <exec_depend>image_transport_plugins</exec_depend>
  <exec_depend>image_geometry</exec_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>image_pipeline</exec_depend>
  <exec_depend>rviz</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
